forms.less: Fix them-mode control-group on mobile
refs #4567

--- a/public/css/icinga/forms.less
+++ b/public/css/icinga/forms.less
@@ -546,3 +546,16 @@ form.icinga-form .form-info {
     text-align: center;
   }
 }
+
+#layout.minimal-layout .icinga-form {
+  .theme-mode {
+    .control-label-group {
+      width: 100%;
+      margin-bottom: .5em;
+    }
+
+    label:first-of-type {
+      margin-left: auto;
+    }
+  }
+}
